Added quotes around 'Generate Tweet'

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Welcome to the Markov Chain Tweeter!</h1>
-  <p>Enter in a Twitter Handle and click Generate Tweet to generate a random tweet based on that Twitter user.</p>
+  <p>Enter in a Twitter Handle and click the "Generate Tweet" button to generate a random tweet based on that Twitter user.</p>
   <form>
     <input type="text" name="twitter-handle">
     <input type="submit" value="Generate Tweet!">
