--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -9,7 +9,7 @@
   <p>Enter in a Twitter Handle and click the "Generate Tweet" button to generate a random tweet based on that Twitter user.</p>
   <form>
     <input type="text" name="twitter-handle">
-    <input type="submit" value="Generate Tweet!">
+    <input type="submit" id="generate-tweet" value="Generate Tweet!">
   </form>
 </body>
 </html>
