--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -11,5 +11,11 @@
     <input type="text" id="twitter-handle">
     <input type="submit" id="generate-tweet" value="Generate Tweet!">
   </form>
+  <script
+    src="https://code.jquery.com/jquery-2.2.4.js"
+    integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
+    crossorigin="anonymous">
+  </script>
+  <script src="static/markov.js"></script>
 </body>
 </html>
