--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -11,6 +11,7 @@
     <input type="text" id="twitter-handle">
     <input type="submit" id="generate-tweet" value="Generate Tweet!">
   </form>
+  <div id="generated-tweets"></div>
   <script
     src="https://code.jquery.com/jquery-2.2.4.js"
     integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="
